# structured-ocr

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  STATUS.md  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.py
.github/workflows/: test.yml
configs/: accelerate_fsdp.yaml  deepspeed_zero2.json  deepspeed_zero3.json  training_grpo.yaml  training_sft.yaml  training_sft_then_grpo.yaml
data/: .gitkeep
reports/: validation_report.json
scripts/: distributed_launch.sh  train_grpo.py  train_sft.py
src/structured_ocr/: __init__.py  cli.py
src/structured_ocr/api/: __init__.py  app.py  dependencies.py
src/structured_ocr/corpus/: __init__.py  corpus_cli.py  generator.py  templates.py
src/structured_ocr/data/: types.py
src/structured_ocr/eval/: __init__.py  benchmark.py  cli.py  compilability.py  metrics.py  references.py  report.py
tests/: __init__.py  run_smoke.py  run_smoke_existing.py
tests/api/: test_app.py  test_evaluate.py  test_ocr.py  test_requests.py  test_verify.py
tests/corpus/: test_templates.py
tests/evaluation/: test_benchmark.py  test_compilability.py  test_metrics.py  test_references.py
tests/inference/: test_backend.py  test_config.py  test_engine.py  test_pdf.py
tests/training/: test_compilation_hook.py  test_dataset_utils.py  test_grpo_trainer.py  test_pipeline.py  test_pipeline_verification.py  test_reward_functions.py  test_sft_trainer.py  test_types.py
tests/unit/: test_compiler.py  test_main.py  test_types.py
tests/verification/: __init__.py  test_compiler.py  test_result.py  test_verifier.py
(+27 files in other folders)
